# MAX

./: .gitignore  README.md  pyproject.toml  receive.py  startup.sh
max/: camera_utils.py  config.ini  led_utils.py  main.py  network_utils.py  state_class.py
max/testing/: diagnostics.py  launcher.py  network_test.py
