[tool.poetry]
name = "max"
version = "0.1.0"
description = ""
authors = ["Chris Rico"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
loguru = "^0.7.2"
numpy = "1.26.3"
msgpack = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

